--- a/binding-generator/Cargo.toml
+++ b/binding-generator/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.70.0"
 license = "MIT"
 authors = ["Pro <twisted.fall@gmail.com>"]
 edition = "2021"
+rust-version = "1.59"
 exclude = ["release.toml"]
 
 [lib]
