--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,7 +74,8 @@ opencv-binding-generator = { version = "0.73.0", path = "binding-generator" }
 cc = { version = "<=1.0.79", features = ["parallel"] }
 dunce = "1"
 # jobserver-0.1.25 is the first one that has Client::available() method
-jobserver = "0.1.25"
+# 0.1.27 fails with error[E0412]: cannot find type `RawFd` in `std::os::fd` on rustc-1.59, bump when MSRV is 1.66+
+jobserver = ">=0.1.25,<0.1.27"
 once_cell = "1"
 pkg-config = "0.3"
 semver = "1"
