--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,7 +79,7 @@ jobserver = ">=0.1.25,<0.1.27"
 once_cell = "1"
 pkg-config = "0.3"
 semver = "1"
-shlex = "1"
+shlex = { version = "1", default-features = false }
 # vcpkg-0.2.9 is the first one that has accessible find_vcpkg_root()
 vcpkg = "0.2.9"
 
