--- a/binding-generator/Cargo.toml
+++ b/binding-generator/Cargo.toml
@@ -15,8 +15,8 @@ exclude = ["release.toml"]
 clang = { version = "2", features = ["clang_6_0"] }
 clang-sys = { version = "1", features = ["clang_6_0"] }
 dunce = "1"
-once_cell = "1"
-percent-encoding = "2"
+once_cell = "1" # replace with std::sync::OnceLock when MSRV is 1.70
+percent-encoding = { version = "2", default-features = false }
 regex = "1"
 
 [features]
