--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ keywords = ["opencv", "vision"]
 license = "MIT"
 version = "0.86.1"
 edition = "2021"
-rust-version = "1.59"
+rust-version = "1.66"
 authors = ["Pro <twisted.fall@gmail.com>", "Mathieu Poumeyrol <kali@zoy.org>"]
 autoexamples = false # not all examples compile on just any system
 exclude = ["/.github", "/ci", "/tools", "release.toml", "rustfmt.toml"]
@@ -70,8 +70,8 @@ rgb = { version = "0.8.20", features = ["argb"], optional = true }
 
 [build-dependencies]
 opencv-binding-generator = { version = "0.77.0", path = "binding-generator" }
-# cc starting with version 1.0.80 hangs on build https://github.com/twistedfall/opencv-rust/issues/480
-cc = { version = "<=1.0.79", features = ["parallel"] }
+# cc versions between 1.0.80 and 1.0.83 hang on build https://github.com/twistedfall/opencv-rust/issues/480
+cc = { version = ">=1.0.83", features = ["parallel"] }
 dunce = "1"
 jobslot = "0.2.4"
 once_cell = "1"
