--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,7 +73,7 @@ rgb = { version = "0.8.20", features = ["argb"], optional = true }
 
 [build-dependencies]
 opencv-binding-generator = { version = "0.84.0", path = "binding-generator" }
-cc = { version = ">=1.0.83", features = ["parallel"] }
+cc = { version = "1.0.83", features = ["parallel"] }
 dunce = "1"
 jobslot = "0.2"
 once_cell = "1"
