--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,9 @@ name = "discrete_fourier_transform"
 #name = "gapi_api_example"
 
 [[example]]
+name = "hough_circles"
+
+[[example]]
 name = "hough_lines"
 
 [[example]]
