Replace Mutex with AtomicI32 and rename file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ name = "discrete_fourier_transform"
 #name = "gapi_api_example"
 
 [[example]]
-name = "hough_circles"
+name = "hough_circle"
 
 [[example]]
 name = "hough_lines"
