--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,6 +85,16 @@ vcpkg = "0.2.9"
 
 [dev-dependencies]
 matches = "0.1"
+opencv-binding-generator = { version = "0.84.0", path = "binding-generator" }
+cc = { version = ">=1.0.83", features = ["parallel"] }
+dunce = "1"
+jobslot = "0.2"
+once_cell = "1"
+pkg-config = "0.3"
+semver = "1"
+shlex = { version = "1.3", default-features = false }
+# vcpkg-0.2.9 is the first one that has accessible find_vcpkg_root()
+vcpkg = "0.2.9"
 
 [features]
 default = [
