--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,17 @@ once_cell = "1"
 # version 0.8.20 doesn't contain the deficiency mentioned in https://deps.rs/crate/opencv/0.59.0#vulnerabilities
 rgb = { version = "0.8.20", features = ["argb"], optional = true }
 
+[dependencies.windows]
+version = "0.54"
+optional = true
+features = [
+	"Win32_Foundation",
+	"Win32_Graphics_Direct3D",
+	"Win32_Graphics_Direct3D11",
+	"Win32_Graphics_Dxgi_Common",
+	"Win32_System_WinRT_Direct3D11",
+]
+
 [build-dependencies]
 opencv-binding-generator = { version = "0.84.0", path = "binding-generator" }
 cc = { version = ">=1.0.83", features = ["parallel"] }
@@ -176,6 +187,7 @@ cudaoptflow = []
 cudastereo = ["calib3d"]
 cudawarping = []
 cvv = []
+directx = ["windows"] # TODO only enable to windows
 dnn = []
 dnn_superres = []
 dpm = []
