--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ rgb = { version = "0.8.20", features = ["argb"], optional = true }
 opencv-binding-generator = { version = "0.87.0", path = "binding-generator" }
 cc = { version = "1.0.83", features = ["parallel"] }
 dunce = "1"
-jobslot = "0.2"
+jobserver = "0.1"
 once_cell = "1"
 pkg-config = "0.3"
 semver = "1"
@@ -45,7 +45,7 @@ matches = "0.1"
 opencv-binding-generator = { version = "0.87.0", path = "binding-generator" }
 cc = { version = ">=1.0.83", features = ["parallel"] }
 dunce = "1"
-jobslot = "0.2"
+jobserver = "0.1"
 once_cell = "1"
 pkg-config = "0.3"
 semver = "1"
