--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,9 @@ once_cell = "1"
 # version 0.8.20 doesn't contain the deficiency mentioned in https://deps.rs/crate/opencv/0.59.0#vulnerabilities
 rgb = { version = "0.8.20", features = ["argb"], optional = true }
 
+[target.'cfg(target_os = "windows")'.dependencies]
+windows = { version = "0.56", features = ["Win32_Graphics_Direct3D9", "Win32_Graphics_Direct3D10", "Win32_Graphics_Direct3D11"] }
+
 [build-dependencies]
 opencv-binding-generator = { version = "0.88.0", path = "binding-generator" }
 cc = { version = "1.0.83", features = ["parallel"] }
