--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,16 @@ version = "0.92.2"
 edition = "2021"
 rust-version = "1.66"
 authors = ["Pro <twisted.fall@gmail.com>", "Mathieu Poumeyrol <kali@zoy.org>"]
-exclude = ["/.github", "/ci", "/tools", ".editorconfig", ".gitattributes", ".gitignore", "release.toml", "rustfmt.toml"]
+exclude = [
+	"/.github",
+	"/ci",
+	"/tools",
+	".editorconfig",
+	".gitattributes",
+	".gitignore",
+	"release.toml",
+	"rustfmt.toml",
+]
 
 [lib]
 doctest = false
@@ -29,11 +38,15 @@ once_cell = "1"
 rgb = { version = "0.8.20", features = ["argb"], optional = true }
 
 [target.'cfg(target_os = "windows")'.dependencies]
-windows = { version = "0.58", features = ["Win32_Graphics_Direct3D9", "Win32_Graphics_Direct3D10", "Win32_Graphics_Direct3D11"] }
+windows = { version = "0.58", features = [
+	"Win32_Graphics_Direct3D9",
+	"Win32_Graphics_Direct3D10",
+	"Win32_Graphics_Direct3D11",
+] }
 
 [build-dependencies]
 opencv-binding-generator = { version = "0.90.2", path = "binding-generator" }
-cc = { version = "1.0.83", features = ["parallel"] }
+cc = { version = "<=1.0.83", features = ["parallel"] }
 dunce = "1"
 jobserver = "0.1"
 once_cell = "1"
