--- a/binding-generator/Cargo.toml
+++ b/binding-generator/Cargo.toml
@@ -20,5 +20,8 @@ percent-encoding = { version = "2", default-features = false }
 regex = "1"
 shlex = { version = "1.3", default-features = false }
 
+[dev-dependencies]
+tempfile = "3"
+
 [features]
 clang-runtime = ["clang/runtime", "clang-sys/runtime"]
