--- a/binding-generator/Cargo.toml
+++ b/binding-generator/Cargo.toml
@@ -18,6 +18,7 @@ dunce = "1"
 once_cell = "1" # replace with std::sync::OnceLock when MSRV is 1.70
 percent-encoding = { version = "2", default-features = false }
 regex = "1"
+shlex = { version = "1.3", default-features = false }
 
 [features]
 clang-runtime = ["clang/runtime", "clang-sys/runtime"]
