--- a/release.toml
+++ b/release.toml
@@ -3,3 +3,4 @@ tag-name = "v{{version}}"
 pre-release-replacements = [
 	{ file = "README.md", search = "opencv = \".*?\"", replace = "opencv = \"{{version}}\"" },
 ]
+pre-release-hook = ["docs/regen-docs.sh"]
