--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,8 @@ windows = { version = "0.58", features = ["Win32_Graphics_Direct3D9", "Win32_Gra
 opencv-binding-generator = { version = "0.93.0", path = "binding-generator" }
 cc = { version = "1.0.83", features = ["parallel"] }
 dunce = "1"
-jobserver = "0.1"
+# jobserver-0.1.25 is the first one that has Client::available() method
+jobserver = "0.1.25"
 once_cell = "1"
 pkg-config = "0.3"
 semver = "1"
@@ -48,7 +49,8 @@ matches = "0.1"
 opencv-binding-generator = { version = "0.93.0", path = "binding-generator" }
 cc = { version = ">=1.0.83", features = ["parallel"] }
 dunce = "1"
-jobserver = "0.1"
+# jobserver-0.1.25 is the first one that has Client::available() method
+jobserver = "0.1.25"
 once_cell = "1"
 pkg-config = "0.3"
 semver = "1"
