--- a/binding-generator/Cargo.toml
+++ b/binding-generator/Cargo.toml
@@ -21,7 +21,7 @@ regex = "1"
 shlex = { version = "1.3", default-features = false }
 
 [dev-dependencies]
-tempfile = "3"
+tempfile = { version = "3", default-features = false }
 
 [features]
 clang-runtime = ["clang/runtime", "clang-sys/runtime"]
