--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ maintenance = { status = "actively-developed" }
 members = ["binding-generator"]
 
 [dependencies]
-half = { version = "2", optional = true }
+# todo: MSRV, allow version to go 2.5.0 and above when MSRV is 1.81.0
+half = { version = "2, <2.5.0", optional = true }
 libc = "0.2"
 num-traits = "0.2"
 once_cell = "1"
