--- a/binding-generator/Cargo.toml
+++ b/binding-generator/Cargo.toml
@@ -2,6 +2,7 @@
 name = "opencv-binding-generator"
 description = "Binding generator for opencv crate"
 repository = "https://github.com/twistedfall/opencv-rust"
+readme = "README.md"
 version = "0.96.0"
 license = "MIT"
 authors = ["Pro <twisted.fall@gmail.com>"]
