--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,8 @@ once_cell = "1"
 rgb = { version = "0.8.20", default-features = false, features = ["argb"], optional = true }
 
 [target.'cfg(target_os = "windows")'.dependencies]
-windows = { version = "0.61", features = ["Win32_Graphics_Direct3D9", "Win32_Graphics_Direct3D10", "Win32_Graphics_Direct3D11"] }
+# windows-0.60+ breaks the build in some cases: https://github.com/twistedfall/opencv-rust/issues/660
+windows = { version = "0.59", features = ["Win32_Graphics_Direct3D9", "Win32_Graphics_Direct3D10", "Win32_Graphics_Direct3D11"] }
 
 [build-dependencies]
 opencv-binding-generator = { version = "0.96.0", path = "binding-generator" }
