--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ half = { version = "2, <2.5.0", optional = true }
 libc = "0.2"
 num-traits = "0.2"
 once_cell = "1"
+opencv-binding-generator = { version = "0.96.1", path = "binding-generator" }
 # version 0.8.20 doesn't contain the deficiency mentioned in https://deps.rs/crate/opencv/0.59.0#vulnerabilities
 rgb = { version = "0.8.20", default-features = false, features = ["argb"], optional = true }
 
