--- a/binding-generator/Cargo.toml
+++ b/binding-generator/Cargo.toml
@@ -23,7 +23,8 @@ shlex = { version = "1.3", default-features = false }
 
 [dev-dependencies]
 tempfile = { version = "3", default-features = false }
-criterion = "0.7"
+# todo: MSRV, bump to 0.7 when MSRV is 1.80
+criterion = "0.5"
 
 [features]
 clang-runtime = ["clang/runtime", "clang-sys/runtime"]
