--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "MIT"
 version = "0.95.1"
 # bump edition to 2024 when MSRV is 1.85
 edition = "2021"
-rust-version = "1.77.0"
+rust-version = "1.81.0"
 authors = ["Pro <twisted.fall@gmail.com>", "Mathieu Poumeyrol <kali@zoy.org>"]
 exclude = ["/.github", "/ci", "/tools", "/.editorconfig", "/.gitattributes", "/release.toml", "/rustfmt.toml", ".gitignore"]
 
@@ -24,11 +24,9 @@ maintenance = { status = "actively-developed" }
 members = ["binding-generator"]
 
 [dependencies]
-# todo: MSRV, allow version to go 2.5.0 and above when MSRV is 1.81.0
-half = { version = "2, <2.5.0", optional = true }
+half = { version = "2", optional = true }
 libc = "0.2"
 num-traits = "0.2"
-once_cell = "1"
 # version 0.8.20 doesn't contain the deficiency mentioned in https://deps.rs/crate/opencv/0.59.0#vulnerabilities
 rgb = { version = "0.8.20", default-features = false, features = ["argb"], optional = true }
 
@@ -42,7 +40,6 @@ cc = { version = "1.0.83", features = ["parallel"] }
 dunce = "1"
 # jobserver-0.1.25 is the first one that has Client::available() method
 jobserver = "0.1.25"
-once_cell = "1"
 pkg-config = "0.3"
 semver = "1"
 shlex = { version = "1.3", default-features = false }
@@ -57,7 +54,6 @@ cc = { version = "1.0.83", features = ["parallel"] }
 dunce = "1"
 # jobserver-0.1.25 is the first one that has Client::available() method
 jobserver = "0.1.25"
-once_cell = "1"
 pkg-config = "0.3"
 semver = "1"
 shlex = { version = "1.3", default-features = false }
