"video" module should depend on "dnn"

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -203,7 +203,7 @@ superres = []
 surface_matching = []
 text = []
 tracking = ["video"]
-video = []
+video = ["dnn"]
 videoio = []
 videostab = ["features2d"]
 viz = []
